feat: udistrital/sga_documentacion#507 Controlador GetColocacionesGrupoSinDetalles para control de sobrecolocaciones de grupo de estudio
